[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nodes/effect_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/GradientMap.gd" type="Script" id=2]
[ext_resource path="res://GradientEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://folder.png" type="Texture" id=4]
[ext_resource path="res://disk.png" type="Texture" id=5]
[ext_resource path="res://GradientPresetsDiag.tscn" type="PackedScene" id=6]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform sampler2D grad;

void fragment()
{
	vec4 col = texture(TEXTURE, UV);
	float value = clamp((col.r + col.g + col.b) / 3.0, 0.0, 1.0);
	COLOR = vec4(texture(grad, vec2(1.0-value, 0.5)).rgb, col.a);
}"

[sub_resource type="ShaderMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
shader = SubResource( 1 )
_sections_unfolded = [ "Resource", "Shader Param", "shader", "shader_param/grad" ]

[node name="Gradient Map" index="0" instance=ExtResource( 1 )]
margin_right = 540.0
rect_min_size = Vector2( 0, 20 )
title = "Gradient Map"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.670588, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0.0862745, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="TextureRect" parent="Viewport" index="0"]
material = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 24.0
margin_right = 309.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Container" type="Container" parent="HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 8.0
margin_bottom = 34.0
rect_min_size = Vector2( 8, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_right = 217.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="GradientEdit" parent="HBoxContainer/PanelContainer" index="0" instance=ExtResource( 3 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 20 )
allow_alpha = false

[node name="ShowPresets" type="Button" parent="HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_right = 249.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "TIP_LOAD_GRADIENT"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="SaveGradient" type="Button" parent="HBoxContainer" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 253.0
margin_right = 281.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "TIP_SAVE_GRADIENT"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="Container2" type="Container" parent="HBoxContainer" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_right = 293.0
margin_bottom = 34.0
rect_min_size = Vector2( 8, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="GradientPresetsDiag" parent="." index="2" instance=ExtResource( 6 )]
visible = false
margin_left = 16.0
margin_top = 58.0
margin_right = 309.0
margin_bottom = 258.0
gradient_nodepath = NodePath("../HBoxContainer/PanelContainer/GradientEdit")

[connection signal="value_changed" from="HBoxContainer/PanelContainer/GradientEdit" to="." method="_on_GradientEdit_value_changed"]
[connection signal="pressed" from="HBoxContainer/ShowPresets" to="GradientPresetsDiag" method="show_presets"]
[connection signal="pressed" from="HBoxContainer/SaveGradient" to="GradientPresetsDiag" method="save_gradient"]
